[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "nba-api>=1.9.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymongo>=4.11.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
]
